--- a/app/components/Section1/Section1.css
+++ b/app/components/Section1/Section1.css
@@ -11,7 +11,7 @@
 }
 
 .sec1-content2 {
-  background: url("@/public/image-mockups.png") no-repeat top -120px left;
+  background: url("../../../public/image-mockups.png") no-repeat top -120px left;
   background-size: contain;
   position: relative;
   z-index: 1;
@@ -19,7 +19,7 @@
 }
 
 .bg-desktop {
-  background: url("@/public/bg-intro-desktop.svg") no-repeat top left;
+  background: url("../../../public/bg-intro-desktop.svg") no-repeat top left;
   background-size: 1271px;
   position: relative;
   z-index: 0;
@@ -47,7 +47,7 @@
 
   .bg-desktop {
     display: block;
-    background: url("@/public/bg-intro-mobile.svg") no-repeat center center;
+    background: url("../../../public/bg-intro-mobile.svg") no-repeat center center;
     background-size: 100%;
     height: auto;
     width: 100%;
